# coding-nexus-migrator

./: .env.template  .gitignore  CHANGELOG.md  README.md  build.sh  config-linux.yaml  config.sample.yaml  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
src/coding_migrator/: __init__.py  cli.py  coding_client.py  config.py  downloader.py  exceptions.py  memory_pipeline_migrator.py  migrator.py  models.py  nexus_uploader.py  pipeline_migrator.py  utils.py
